hphp/test/quick/neg_iva.hhas.expectf

Fatal error: Assembler Error: line 22: IVA immediates may not be less than 0 in %s on line -1
